--- a/css/style.css
+++ b/css/style.css
@@ -1,66 +1,107 @@
-body {
-    height: 100%;
-}
-
-#pageContainer {
-    background-image: url(../images/background.jpeg);
-    min-height: 100%;
-    min-width: 100%;
-    background-size: cover;
-}
-
-#gameContainer {
-    height: 500px;
-    width: 500px;
-    background-color: rgb(30, 30, 30);
-    border-radius: 20px;
-    box-shadow: 5px 5px 50px #333333;
-    margin-top: 35px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-#green,
-#red,
-#yellow,
-#blue {
-    height: 225px;
-    width: 225px;
-    border-radius: 20px;
-    margin: auto;
-    cursor: pointer;
-}
-
-#green {
-    background-color: rgb(0, 180, 0);
-}
-
-#red {
-    background-color: rgb(180, 0, 0);
-}
-
-#yellow {
-    background-color: rgb(180, 180, 0);
-}
-
-#blue {
-    background-color: rgb(0, 0, 180);
-}
-
-
-
-#controls {
-    height: 225px;
-    width: 225px;
-    background-color: rgb(60, 60, 60);
-    border-radius: 50px;
-    position: relative;
-    left: 100px;
-    top: 100px;
-    z-index: 1;
-}
-
-h1 {
-    color: blue;
-    font-size: 2em;
-}
+ @import url('https://fonts.googleapis.com/css?family=Anton');
+ body {
+     height: 100%;
+ }
+ 
+ #pageContainer {
+     background-image: url(../images/background.jpeg);
+     min-height: 100%;
+     min-width: 100%;
+     background-size: cover;
+ }
+ 
+ #gameContainer {
+     display: flex;
+     justify-content: space-around;
+     align-items: center;
+     flex-wrap: wrap;
+     padding: 3px;
+     height: 500px;
+     width: 500px;
+     background-color: rgb(30, 30, 30);
+     border-radius: 20px;
+     box-shadow: 5px 5px 50px #333333;
+     margin-top: 35px;
+     margin-left: auto;
+     margin-right: auto;
+ }
+ 
+.gameSquare {
+     height: 240px;
+     width: 240px;
+     border-radius: 20px;
+     cursor: pointer;
+ }
+ 
+ #green {
+     background-color: rgb(0, 180, 0);
+ }
+ 
+ #red {
+     background-color: rgb(180, 0, 0);
+ }
+ 
+ #yellow {
+     background-color: rgb(180, 180, 0);
+ }
+ 
+ #blue {
+     background-color: rgb(0, 0, 180);
+ }
+ 
+ #controls {
+     positon: absolute;
+     transform: translate(0, -350px);
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     flex-wrap: wrap;
+     height: 240px;
+     width: 240px;
+     background-color: rgb(30, 30, 30);
+     border-radius: 20px;
+     z-index: 1;
+ }
+ 
+ #countContainer {
+     width: 50px;
+     background-color: black;
+ }
+ 
+ #start {
+     display: flex;
+     height: 65px;
+     width: 65px;
+     border-radius: 40px;
+     background-color: red;
+ }
+ 
+ #strict {
+     display: flex;
+     height: 65px;
+     width: 65px;
+     border-radius: 40px;
+     background-color: yellow;
+ }
+ 
+ h1 {
+     color: white;
+     font-size: 2em;
+     font-family: 'Anton', sans-serif;
+     text-align: center;
+ }
+ 
+ h2 {
+     color: red;
+     font-size: 2em;
+     font-family: 'Anton', sans-serif;
+     text-align: center;
+ }
+ 
+ h3 {
+     color: white;
+     font-size: 1.25em;
+     font-family: 'Anton', sans-serif;
+     text-align: center;
+     margin: auto;
+ }
