--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
      margin-right: auto;
  }
  
-.gameSquare {
+ .gameSquare {
      height: 240px;
      width: 240px;
      border-radius: 20px;
@@ -74,6 +74,7 @@
      width: 65px;
      border-radius: 40px;
      background-color: red;
+     cursor: pointer;
  }
  
  #strict {
@@ -82,6 +83,28 @@
      width: 65px;
      border-radius: 40px;
      background-color: yellow;
+     cursor: pointer;
+ }
+ 
+ #gameOver,
+ #tryAgain,
+ #winner {
+     display: none;
+     height: 125px;
+     width: 500px;
+     background-color: rgb(30, 30, 30);
+     border-radius: 20px;
+     box-shadow: 5px 5px 50px #333333;
+     margin-top: 35px;
+     margin-left: auto;
+     margin-right: auto;
+ }
+ 
+ #gameOver > h3:hover,
+ #tryAgain > h3:hover,
+ #winner > h3:hover {
+     color: red;
+     cursor: pointer;
  }
  
  h1 {
