--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
  @import url('https://fonts.googleapis.com/css?family=Anton');
- body {
+ body,
+ html {
      height: 100%;
  }
  
  #pageContainer {
-     background-image: url(../images/background.jpeg);
+     background-image: url(../images/background.jpg);
      min-height: 100%;
      min-width: 100%;
      background-size: cover;
@@ -20,7 +21,7 @@
      width: 500px;
      background-color: rgb(30, 30, 30);
      border-radius: 20px;
-     box-shadow: 10px 10px 60px rgb(0, 0, 0);
+     box-shadow: 10px 10px 10px rgb(0, 0, 0);
      margin-top: 35px;
      margin-left: auto;
      margin-right: auto;
@@ -55,54 +56,64 @@
  
  #controls {
      position: absolute;
-     /*display: flex;
-     justify-content: center;
+     display: flex;
+     flex-direction: column;
+     justify-content: space-between;
      align-items: center;
-     flex-wrap: wrap; */
      height: 200px;
      width: 200px;
+     padding-bottom: 10px;
      background-color: rgb(30, 30, 30);
      border-radius: 20px;
-          box-shadow: 3px 3px 1px rgb(0, 0, 0);
-
+     box-shadow: 3px 3px 1px rgb(0, 0, 0);
      z-index: 1;
  }
  
  #countContainer {
-     height: 50px;
-     width: 50px;
+     display: flex;
+     justify-content: center;
+     height: 65px;
+     width: 65px;
+     border-radius: 40px;
      background-color: black;
  }
  
- #start {
+ #buttons {
+     width: 100%;
      display: flex;
-     height: 65px;
-     width: 65px;
-     margin: auto;
-     border-radius: 40px;
-     background-color: red;
-     cursor: pointer;
+     justify-content: space-between;
  }
  
+ #start,
  #strict {
      display: flex;
      height: 65px;
      width: 65px;
      margin: auto;
      border-radius: 40px;
-     background-color: yellow;
      cursor: pointer;
+ }
+ 
+ #start {
+     background-color: red;
+ }
+ 
+ #strict {
+     background-color: yellow;
  }
  
  #gameOver,
  #tryAgain,
  #winner {
      display: none;
+     justify-content: space-between;
+     align-items: center;
+     flex-direction: column;
      height: 125px;
      width: 500px;
      background-color: rgb(30, 30, 30);
      border-radius: 20px;
-     box-shadow: 5px 5px 50px #333333;
+     box-shadow: 10px 10px 10px rgb(0, 0, 0);
      margin-top: 35px;
      margin-left: auto;
      margin-right: auto;
@@ -135,7 +146,6 @@
      font-size: 1.25em;
      font-family: 'Anton', sans-serif;
      text-align: center;
-          text-shadow: 2px 2px 1px black;
-
+     text-shadow: 2px 2px 1px black;
      margin: auto;
  }
